--- a/css/main.css
+++ b/css/main.css
@@ -153,7 +153,7 @@ Fondo de la sección del mapa
 Alineación del texto
 */
 .price{
-	padding-top: 40%;
+	padding-top: 30%;
 	padding-left: 3%;
 }
 
@@ -181,7 +181,41 @@ Estilo del formulario
 	color: white;
 }
 
-.thumbnail{
-	width: 400px;
-	height: 300px;
+/*
+Botón "trazar ruta"
+*/
+.boton-ruta{
+	margin-top: 10%;
+	margin-left: 25%;
+	font-weight: bold;
+}
+/*
+Mapa insertado
+*/
+.map-img {
+	margin: 5%;
+}
+
+/*
+Contenedor del mapa
+*/
+.map-container{
+	border: 1px solid #fff;
+	margin-top: 5%;
+}
+
+/*
+Estilos del footer
+*/
+footer{
+	background-color: #2b2b2b;
+	color: #fff;
+	height: 43em;
+}
+
+/*
+Logo LabCar dentro del footer
+*/
+.footer-logo {
+	margin-top: 10%;
 }
