--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@ body {
 	font-family: 'Lato', sans-serif;
 }
 
+.logo {
+	padding-left: 50%;
+}
+
 /*
 Imagen del taxi de fondo
 */
@@ -25,6 +29,7 @@ Sección amarilla
 	margin-top: 20%;
 	color: #fff;
 	height: 20em;
+	width: 100%;
 }
 
 /*
@@ -48,9 +53,16 @@ Texto ubicado antes del logo
 /*
 Texto "O bien"
 */
-.white-text {
-	font-size: 1em;
-	font-weight: bold;
+.driver-text{
+	padding-left: 10%;
+}
+
+.driver-text::after{
+	content: "______________"
+}
+
+.driver-text::before{
+	content: "______________"
 }
 
 /*
@@ -58,6 +70,7 @@ Botón regístrate
 */
 .botoncito {
 	margin: 0% 5%;
+	font-weight: bold;
 }
 
 /*
@@ -65,6 +78,7 @@ Botón conductor
 */
 .boton-grande {
 	margin: 0% 5%;
+	font-weight: bold;
 }
 
 /*
